<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background3"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/origin_train"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/connection"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/train"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/origin_train_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/connection"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/origin_train"
            android:fontFamily="sans-serif"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/origin_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/origin_train"
            android:fontFamily="sans-serif"
            android:text="@string/line"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/origin_line_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/origin_train"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/origin_line"
            android:fontFamily="sans-serif"
            android:text="@string/line"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/origin_depart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/origin_line"
            android:fontFamily="sans-serif"
            android:text="@string/depart"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/origin_depart_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/origin_line"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/origin_depart"
            android:fontFamily="sans-serif"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/origin_arrive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/origin_depart"
            android:fontFamily="sans-serif"
            android:text="@string/arrive"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/origin_arrive_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/origin_depart"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/origin_arrive"
            android:fontFamily="sans-serif"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/origin_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/origin_arrive"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/status"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/origin_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/origin_arrive"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/origin_status"
            android:fontFamily="sans-serif"
            android:textColor="@color/text"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:fontFamily="sans-serif"
            android:text="@string/connect"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/connection_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/connection"
            android:fontFamily="sans-serif"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/term_train"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/connection"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/train"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/term_train_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/connection"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/term_train"
            android:fontFamily="sans-serif"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/term_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/term_train"
            android:fontFamily="sans-serif"
            android:text="@string/line"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/term_line_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/term_train"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/term_line"
            android:fontFamily="sans-serif"
            android:text="@string/line"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/term_depart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/term_line"
            android:fontFamily="sans-serif"
            android:text="@string/depart"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/term_depart_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/term_line"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/term_depart"
            android:fontFamily="sans-serif"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/term_arrive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/term_depart"
            android:fontFamily="sans-serif"
            android:text="@string/arrive"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/term_arrive_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/term_depart"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/term_arrive"
            android:fontFamily="sans-serif"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/term_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/term_arrive"
            android:fontFamily="sans-serif"
            android:text="@string/status"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/term_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/term_arrive"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/term_status"
            android:fontFamily="sans-serif"
            android:textColor="@color/text"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>